; ModuleID = '/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_dispose_thread_data.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_dispose_thread_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_neverbleed_thread_data_t = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dispose_thread_data(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.st_neverbleed_thread_data_t*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.st_neverbleed_thread_data_t*
  store %struct.st_neverbleed_thread_data_t* %5, %struct.st_neverbleed_thread_data_t** %3, align 8
  %6 = load %struct.st_neverbleed_thread_data_t*, %struct.st_neverbleed_thread_data_t** %3, align 8
  %7 = getelementptr inbounds %struct.st_neverbleed_thread_data_t, %struct.st_neverbleed_thread_data_t* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp sge i32 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.st_neverbleed_thread_data_t*, %struct.st_neverbleed_thread_data_t** %3, align 8
  %13 = getelementptr inbounds %struct.st_neverbleed_thread_data_t, %struct.st_neverbleed_thread_data_t* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @close(i32 %14)
  %16 = load %struct.st_neverbleed_thread_data_t*, %struct.st_neverbleed_thread_data_t** %3, align 8
  %17 = getelementptr inbounds %struct.st_neverbleed_thread_data_t, %struct.st_neverbleed_thread_data_t* %16, i32 0, i32 0
  store i32 -1, i32* %17, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
